# char

./: .gitignore  Cargo.toml  Taskfile.yaml  doxxer.cli.toml  package.json  pnpm-lock.yaml  render.yaml
.github/actions/apple_cert/: action.yaml
.github/actions/install_cli_deps/: action.yaml
.github/actions/macos_notarize_dmg/: action.yaml
.github/scripts/: content-audit.mjs
.github/workflows/: cli_cd.yaml  cli_ci.yml  cli_standalone_cd.yaml  content-check.yml  desktop_cd.yaml  desktop_ci.yaml  devin_review_legal.yaml  devin_triage_issues.yaml  devin_update_docs.yaml  devin_weekly_blog.yaml  mobile_bridge_ci.yaml  stt_e2e.yaml
apps/api/: AGENTS.md  Cargo.toml
apps/api/src/: main.rs  rate_limit.rs
apps/cli/: Cargo.toml
apps/cli-ui/: Package.swift
apps/cli/npm/: .gitignore  install.js  package.json
apps/cli/src/: cli.rs  error.rs  main.rs  output.rs  update_check.rs
apps/cli/src/commands/: cactus_server.rs  desktop.rs  exit.rs  mod.rs  status.rs
apps/cli/src/commands/batch/: mod.rs  runtime.rs
apps/cli/src/commands/chat/ui/: mod.rs
apps/cli/src/commands/connect/: action.rs  app.rs  effect.rs  mod.rs  providers.rs  runtime.rs
apps/cli/src/commands/connect/ui/: calendar_select.rs  input_form.rs  mod.rs  permission.rs  provider_list.rs
apps/cli/src/commands/entry/: action.rs  app.rs  effect.rs  mod.rs  ui.rs
apps/cli/src/commands/entry/app/: commands.rs  mod.rs
apps/cli/src/commands/entry/ui/: command_popup.rs  mod.rs
apps/cli/src/commands/humans/: mod.rs
apps/cli/src/commands/listen/: app.rs  audio_drop.rs  exit.rs  mod.rs  runtime.rs  ui.rs
apps/cli/src/commands/listen/app/: mod.rs  state.rs
apps/cli/src/commands/listen/ui/: mod.rs
apps/cli/src/commands/model/: action.rs  app.rs  download.rs  effect.rs  list.rs  mod.rs  runtime.rs  screen.rs  ui.rs
apps/cli/src/commands/orgs/: mod.rs
apps/cli/src/commands/record/: app.rs  mod.rs
apps/cli/src/commands/sessions/view/: ui.rs
apps/cli/src/commands/shortcut/: daemon.rs  hotkey.rs  install.rs  mod.rs  plist.rs  screen.rs  service.rs  uninstall.rs
apps/cli/src/commands/skill/: install.rs
apps/cli/src/commands/transcribe/: mod.rs
apps/cli/src/commands/update/: action.rs  app.rs  effect.rs  mod.rs  ui.rs
apps/cli/src/stt/: provider.rs
apps/cli/src/tui/: mod.rs
apps/cli/src/widgets/: app_shell.rs  inline_box.rs  mod.rs  multi_select.rs  permission_button.rs
apps/desktop/: index.html  package.json
apps/desktop/src/: routeTree.gen.ts
apps/desktop/src-tauri/: Cargo.toml
apps/web/: AGENTS.md  content-collections.ts  package.json  vite.config.ts
apps/web/public/: llms.txt
apps/web/src/: env.ts  routeTree.gen.ts  styles.css
crates/api-auth/src/: lib.rs
crates/api-client/: Cargo.toml  build.rs  openapi.gen.json
crates/api-nango/src/: integrations.rs  lib.rs  state.rs
crates/apple-calendar/src/: lib.rs
crates/audio-actual/: Cargo.toml
crates/audio-actual/src/speaker/: linux.rs  mod.rs
crates/audio-chunking/: Cargo.toml
crates/audio-chunking/examples/: chunking.rs
crates/audio-chunking/src/: chunk.rs  error.rs  lib.rs  speech.rs
crates/audio-chunking/src/vad/: chunk_policy.rs  continuous.rs  mod.rs  session.rs
crates/cactus-model/src/: lib.rs
crates/calendar/src/: lib.rs
crates/cli-tui/src/: lib.rs  render.rs
crates/db-app/migrations/: 20260318000000_sessions.sql  20260318000000_users.sql  20260318000001_folders.sql  20260318000001_words.sql  20260318000002_sessions.sql  20260318000002_speaker_hints.sql  20260318000003_chat_messages.sql  20260318000003_words.sql  20260318000004_sessions_fts.sql  20260318000004_speaker_hints.sql  20260318000005_chat_messages.sql  20260318000007_organizations.sql  20260318000008_humans.sql  20260318000009_session_participants.sql  20260318000010_notes.sql  20260318000011_connections.sql  20260318000012_calendars.sql  20260318000013_settings.sql  20260318000014_threads_messages.sql  20260318000015_events.sql  20260318000016_aliases.sql  20260318000017_slack.sql  20260318000018_timeline_view.sql  20260318000019_event_participants.sql
crates/db-app/src/: aliases_ops.rs  aliases_types.rs  calendars_ops.rs  calendars_types.rs  chat_messages_ops.rs  (+30 more)
crates/fs-format/: Cargo.toml
crates/fs-sync-core/: Cargo.toml
crates/fs-sync-core/benches/: audio_import.rs
crates/fs-sync-core/src/: session_content.rs  types.rs
crates/fs-sync-core/src/audio/: encode.rs  file_move.rs  mod.rs
crates/linear/: Cargo.toml
crates/listener2-core/: Cargo.toml
crates/listener2-core/src/: lib.rs
crates/listener2-core/src/batch/: actor.rs  bootstrap.rs  mod.rs
crates/notification-worker/: Cargo.toml
crates/notification-worker/src/: error.rs  lib.rs  runtime.rs  worker.rs
crates/notification-worker/src/source/: fs.rs  mod.rs
crates/shortcut-macos/: Cargo.toml
crates/transcribe-cactus/: Cargo.toml
crates/transcribe-cactus/examples/live/: audio.rs  display.rs  main.rs  server.rs  stream.rs
crates/transcribe-cactus/src/: error.rs
crates/transcribe-cactus/src/service/batch/: transcribe.rs
crates/transcribe-cactus/tests/: live.rs  snapshot.rs
crates/transcribe-cactus/tests/common/: mod.rs
crates/transcribe-cactus/tests/snapshots/: snapshot__english_10_packets.snap
crates/transcribe-core/: Cargo.toml
crates/transcribe-core/src/: audio.rs  batch.rs
crates/transcribe-whisper-local/: Cargo.toml
crates/transcribe-whisper-local/src/: error.rs  lib.rs
crates/transcribe-whisper-local/src/service/: batch.rs  streaming.rs
otel/caddy/: Caddyfile  Dockerfile
otel/collector/: Dockerfile  config.yaml
plugins/todo/: Cargo.toml  build.rs
plugins/todo/js/: bindings.gen.ts
plugins/todo/permissions/: default.toml
plugins/todo/permissions/autogenerated/: reference.md
plugins/todo/permissions/autogenerated/commands/: linear_list_teams.toml  linear_list_tickets.toml
plugins/todo/permissions/schemas/: schema.json
plugins/todo/src/: commands.rs  error.rs  fetch.rs  lib.rs
plugins/updater2/: Cargo.toml  build.rs
plugins/windows/: Cargo.toml
plugins/windows/src/window/: v1.rs
scripts/: setup-linux-others.sh
(+378 files in other folders)
