[package]
name = "api-client"
version = "0.1.0"
edition = "2024"

[dependencies]
hypr-google-calendar = { workspace = true }
hypr-outlook-calendar = { workspace = true }
hypr-ticket-interface = { workspace = true }

chrono = { workspace = true, features = ["serde"] }
progenitor-client = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[build-dependencies]
progenitor-utils = { path = "../progenitor-utils" }
