[package]
name = "fs-sync-core"
version = "0.1.0"
edition = "2024"

[dependencies]
hypr-audio-utils = { workspace = true }
hypr-frontmatter = { workspace = true }
hypr-fs-format = { workspace = true }
hypr-tiptap = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
specta = { workspace = true, features = ["derive", "serde_json"] }

glob = "0.3"
hypr-afconvert = { workspace = true }
hypr-mp3 = { workspace = true }
rayon = { workspace = true }
rodio = { workspace = true, features = ["symphonia-all"] }

chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
assert_fs = "1"
hypr-data = { workspace = true }
predicates = "3"
tempfile = { workspace = true }
