[package]
name = "transcribe-cactus"
version = "0.1.0"
edition = "2024"

[dependencies]
hypr-audio-utils = { workspace = true }
hypr-cactus = { workspace = true }
hypr-language = { workspace = true }
hypr-vad-chunking = { workspace = true }
hypr-ws-utils = { workspace = true }
owhisper-interface = { workspace = true }
rodio = { workspace = true }

bytes = { workspace = true }
colored = "3"
serde_html_form = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

axum = { workspace = true, features = ["ws"] }
futures-util = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
hypr-audio = { workspace = true }
hypr-audio-actual = { workspace = true }
hypr-audio-mock = { workspace = true }
hypr-audio-utils = { workspace = true }
hypr-cactus = { workspace = true }
hypr-data = { workspace = true }
hypr-language = { workspace = true }

owhisper-client = { workspace = true }
owhisper-interface = { workspace = true }

axum = { workspace = true, features = ["ws"] }
bytes = { workspace = true }
crossterm = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }

colored = "3"
dirs = { workspace = true }
pico-args = { workspace = true }
strum = { workspace = true, features = ["derive"] }

insta = { workspace = true, features = ["json", "redactions"] }
sequential-test = "0.2"
serde_json = { workspace = true }

[[example]]
name = "live"

[[example]]
name = "batch"
