[package]
name = "transcribe-core"
version = "0.1.0"
edition = "2024"

[dependencies]
hypr-audio-chunking = { workspace = true }
hypr-audio-utils = { workspace = true }
owhisper-interface = { workspace = true }

axum = { workspace = true, features = ["ws"] }
futures-util = { workspace = true }
rodio = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
