[package]
name = "tauri-plugin-windows"
version = "0.1.0"
authors = ["You"]
edition = "2024"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-windows"
description = ""

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
specta-typescript = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true }
objc2-app-kit = { workspace = true, features = ["NSWindow", "NSColor", "NSScreen"] }
objc2-foundation = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

strum = { workspace = true, features = ["derive"] }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4"] }

specta = { workspace = true }
tauri = { workspace = true, features = ["test", "macos-private-api"] }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

tauri-plugin-analytics = { workspace = true }
tauri-plugin-os = { workspace = true }
tauri-plugin-sfx = { workspace = true }
tauri-plugin-window-state = { workspace = true }

thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }

[features]
default = []
new = []
